--- a/templates/form.html
+++ b/templates/form.html
@@ -102,7 +102,7 @@
                       type="radio"
                       name="ans"
                       id="ans"
-                      value="Not Avalible"
+                      value="Not Available"
                     />
                     Not Avalible
                     <span class="formbold-radio-checkmark"></span>
