--- a/templates/error.html
+++ b/templates/error.html
@@ -1,5 +1,17 @@
+<!DOCTYPE html>
+<!-- Coding By CodingNepal - www.codingnepalweb.com -->
 <html>
-    <body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Glassmorphism Login Form | CodingNepal</title>
+  <link rel="stylesheet" href="static/css/blur.css">
+</head>
+<body>
+  <div class="wrapper">
+    <div class="formbold-form-wrapper">
         <h1>Please don't insert the details multiple time</h1>
-    </body>
+    </div>
+  </div>
+</body>
 </html>
